add update username
